Wed Mar 13 14:38:53 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/missing.h (struct timespec): include <sys/time.h>

Wed Mar 13 13:54:45 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: check struct timeval exist or not.
	* include/ruby/missing.h (struct timeval): check HAVE_STRUCT_TIMEVAL
	  properly. and don't include sys/time.h if struct timeval exist.

	* file.c: include sys/time.h explicitly.
	* random.c: ditto.
	* thread_pthread.c: ditto.
	* time.c: ditto.
	* ext/date/date_strftime.c: ditto.

Fri Mar 15 14:45:02 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in (_FORTIFY_SOURCE): added a few comments.

Fri Mar 15 14:17:55 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (numberof): renamed from ARRAY_SIZE() because
	  other all files use numberof().

Say Mar 15 01:33:00 2013  Charles Oliver Nutter <headius@headius.com>

	* test/ruby/test_lazy_enumerator.rb (TestLazyEnumerator#test_drop_while):
	  Modify while condition to show dropping remains off after first false
	  value. This change was made in 39711.

Fri Mar 15 23:06:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (GetTimeval): check if already initialized instance.

	* time.c (GetNewTimeval): check if newly created instance.

	* time.c (time_init_0, time_init_1, time_init_copy, time_mload): must
	  be newly created instance.  [ruby-core:53436] [Bug #8099]

Fri Mar 15 14:51:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_sys_fail_path_with_func): share same function, and path
	  may be nil.

Fri Mar 15 08:24:51 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_sys_fail_path): define & use rb_sys_fail_path0 like r39752

Fri Mar 15 04:08:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* proc.c: Typo in Proc.arity found by Jack Nagel [Bug #8094]

Thu Mar 14 16:59:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_function_name_string): macro for function name